app/globals.css
/* ... */
:root {
  /* width && padding */
  --max-width: 1346.15px;
  --padding: 1em;

  --nav-fs: 0.788rem;
  --nav-fw: 500;
  --fs-800: 2.6rem;
  --fs-700: 1.5rem;
  --fs-600: 1.2rem;
  --fs-500: 1.125rem;
  --font-family: "El Messiri", sans-serif;

  /* color */
  --text-color: #000000;
  --btn-color: #ffffff;
  --bg-color: #133431;

  --story-bg-color: #f6f6f6;
}

/*=====================navlinks========================  */

#Header {
  --max-width: 100%;
  /* --padding: 1em; */

  width: min(var(--max-width), 100%);
  margin-inline: auto;
  padding-right: 3.5em;

  display: flex;
  align-items: center;
  justify-content: space-between;
  background: var(--btn-color);

  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 10001;
}

.logo {
  background-color: var(--bg-color);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 250px;
  height: 79.99px;
}

.navigations {
  display: flex;
  gap: 4.5em;
}

.nav_links {
  text-decoration: none;
  text-transform: uppercase;
  font-size: var(--nav-fs);
  font-weight: var(--nav-fw);
  color: var(--text-color);
  position: relative;
}

.nav_links::after {
  content: " ";
  position: absolute;
  left: 0;
  bottom: -2px;
  width: 0;
  height: 1.1px;
  background-color: var(--text-color);
}

.nav_links:hover::after {
  width: 100%;
  transition: all 0.3s ease;
  cursor: pointer;
}
/* =====================header_bg================= */

.home {
  height: 100vh;
  background-image: url("/hero_bg_img.webp");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
}

.home_context {
  width: 100%;
  max-width: 57.938rem;
  background-color: var(--btn-color);
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 1.5em;
  display: flex;
  align-items: center;
  gap: 2em;
}

.home_header,
.home_p {
  flex-basis: 100%;
}

.home_header h3 {
  font-size: var(--fs-800);
  line-height: 1.1;
  font-weight: var(--nav-fw);
  font-family: "Playfair Display", serif;
}

/* ======================story==================== */

.story_even_container {
  --max-width: 100%;
  /* --padding: 1em; */

  width: min(var(--max-width), 100%);
  padding-left: 7.244rem;
  padding-top: 3rem;
}

.Our_story_flex {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.story_text {
  max-width: 60.481rem;
  min-height: 70vh;
  display: flex;
  flex-basis: 70%;
  background-color: #ffffff;
  position: relative;
}

.story_text::before {
  content: " ";
  width: 60%;
  height: 100%;
  background: #ffffff;
  position: absolute;
  left: 55%;
  background-image: url("/our_story.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.story_content {
  z-index: 1;
}

.story_text h3 {
  font-size: var(--fs-800);
  font-weight: var(--nav-fw);
  font-family: "Playfair Display", serif;
  padding-block: 0.6em;
}

.story_text p {
  max-width: 38.481rem;
  padding-block: 1em;
  line-height: 1.5;
  font-weight: 300;
}

.button {
  margin-block: 1em;
  padding: 0.75em 2em;
  border: 2px solid var(--bg-color);
  color: var(--bg-color);
  font-weight: var(--nav-fw);
  background: transparent;
}

.button:hover {
  background-color: var(--bg-color);
  transition: all 0.3s ease;
  color: var(--btn-color);
  cursor: pointer;
}

.story_image {
  flex-basis: 40%;
}

.story_image img {
  width: 100%;
}

.even_container {
  padding: 3em 7.244rem;
  /* width: min(var(--max-width), 100% - var(--padding) * 2);
  margin-inline: auto;
  padding-block: 3em; */
}

.services_bg_color {
  background-color: var(--story-bg-color);
}

.our_services h3 {
  font-size: var(--fs-800);
  font-weight: var(--nav-fw);
  font-family: var(--font-family);
  padding-bottom: 0.3em;
}

/* ======================faqs==================== */
.faq {
  border-bottom: 2px solid #00000041;
  cursor: pointer;
}

.question {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-bottom: 1em;
  padding-top: 1em;
}

.question_number {
  display: flex;
  gap: 2em;
  font-size: var(--fs-700);
  font-weight: var(--nav-fw);
  font-family: var(--font-family);
}

.answer {
  max-height: 0;
  overflow: hidden;
  padding-inline: 4.5em;
  line-height: 1.5;
  transition: max-height 0.7s ease;
}

.answer p {
  padding-block: 1em;
  font-weight: lighter;
}

.faq_arrow_icon {
  width: 52px;
  height: 52px;
  background-color: var(--bg-color);
  border-radius: 100vmax;
  display: flex;
  align-items: center;
  justify-content: center;
}

.faq.active .answer {
  max-height: 400px;
  animation: fade 1s ease-in-out;
}

.faq.active img {
  transform: rotate(180deg);
}

.faq_arrow_icon img {
  transition: transform 0.5s ease;
}

@keyframes fade {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

/* ==========================our_work================ */

.our_work_padding_block {
  padding: 3rem 7.244rem;
}

.our_work {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.our_work h3 {
  font-size: var(--fs-800);
  font-weight: var(--nav-fw);
  font-family: var(--font-family);
}

.project_link {
  font-size: var(--fs-600);
  color: var(--bg-color);
  font-family: var(--font-family);
}

.project_link:hover {
  text-decoration: none;
  transition: all 0.3s ease;
}

/*=============== horizontal scrool section=============== */
.section {
  position: relative;
  height: 100vh;
  overflow: hidden;
  padding-left: 7.244rem;
}

.container {
  padding-top: 1em;
  display: flex;
  align-items: center;
  gap: 1.5em;
  height: 100%;
}

.item {
  flex: 0 0 auto;
  width: 100%;
  max-width: 502.19px;
  height: 602.62px;
}

.item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.home {
  position: relative;
}

.hover:hover {
  transform: translateY(20px);
  transition: all 0.5s ease;
  cursor: pointer;
}
/* ... */

